--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Epitome</title>
+    <title>Mashia Mazumder Portfolio</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -427,7 +427,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:#0">hello@epitome.com</a>
+                    <a href="mailto:#0">mashiamazumder@gmail.com</a>
                 </p>
 
                 <p class="section-desc">
@@ -439,11 +439,7 @@
         </div>
 
         <div class="row contact-infos" data-aos="fade-up" data-aos-anchor=".contact-main">
-
-            <div class="column large-5 medium-full contact-phone">
-                <h4>Call Me</h4>
-                <a href="tel:197-543-2345">+197 543 2345</a>
-            </div>
+            
 
             <div class="column large-7 medium-full contact-social">
                 <h4>Social</h4>
