--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
         <div class="row contact-main" data-aos="fade-up">
             <div class="column large-full">
                 <p class="contact-email">
-                    <a href="mailto:#0">mashiamazumder@gmail.com</a>
+                    <a href="mailto:#0" style="font-size:55px;">mashiamazumder@gmail.com</a>
                 </p>
 
                 <p class="section-desc">
